--- a/dienstleistungen.html
+++ b/dienstleistungen.html
@@ -4,35 +4,250 @@
   <meta charset="UTF-8" />
   <title>Sylegro – Dienstleistungen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Schrift Kiro -->
+  <link href="https://fonts.googleapis.com/css2?family=Kiro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
-    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif; margin: 0; padding: 0; background: #f5f5f5; color: #111827; }
-    header { background: #111827; color: white; padding: 16px 20px; }
-    .header-inner { max-width: 1000px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between; gap: 16px; }
-    .logo-area { display: flex; align-items: center; gap: 12px; }
-    .logo-area img { height: 40px; width: 40px; object-fit: contain; border-radius: 8px; background: white; }
-    .logo-text span:first-child { font-weight: 600; }
-    .logo-text span:last-child { font-size: 0.8rem; opacity: 0.9; }
-    nav a { color: white; text-decoration: none; margin-left: 16px; font-size: 0.9rem; }
-    nav a:hover { text-decoration: underline; }
-    nav { display: flex; flex-wrap: wrap; justify-content: flex-end; }
-    @media (max-width: 800px) { .header-inner { flex-direction: column; align-items: flex-start; } nav { justify-content: flex-start; } nav a { margin-left: 0; margin-right: 12px; } }
-    main { max-width: 1000px; margin: 0 auto; padding: 20px; }
-    .card { background: white; border-radius: 12px; padding: 20px; margin-bottom: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); }
-    h1, h2 { margin-top: 0; }
-    ul { padding-left: 20px; }
-    footer { text-align: center; font-size: 0.8rem; color: #6b7280; padding: 20px; }
+    * {
+      box-sizing: border-box;
+    }
+
+    :root {
+      --sylegro-blue: #0063A5;
+      --sylegro-green: #17A863;
+      --bg-light: #f5f5f5;
+    }
+
+    body {
+      font-family: "Kiro", system-ui, -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: var(--bg-light);
+      color: #0f172a;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    /* HEADER */
+    header {
+      background: linear-gradient(to right, var(--sylegro-blue), var(--sylegro-green));
+      color: white;
+      padding: 8px 20px;
+    }
+
+    .header-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+    }
+
+    .logo-area img {
+      height: 220px;
+      width: auto;
+      object-fit: contain;
+      display: block;
+      filter: drop-shadow(0 6px 16px rgba(15, 23, 42, 0.5));
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    nav a {
+      color: white;
+      font-size: 0.98rem;
+      font-weight: 500;
+      position: relative;
+      padding-bottom: 3px;
+    }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 2px;
+      background: rgba(255,255,255,0.9);
+      border-radius: 999px;
+      transition: width .18s ease-out;
+    }
+
+    nav a:hover::after {
+      width: 100%;
+    }
+
+    /* MAIN LAYOUT */
+    main {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 24px 20px 32px;
+    }
+
+    h1, h2, h3 {
+      margin-top: 0;
+      font-weight: 600;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 1.35rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      line-height: 1.6;
+      font-size: 0.98rem;
+      margin-top: 0;
+      margin-bottom: 10px;
+    }
+
+    /* Intro-Kachel */
+    .card {
+      background: #ffffff;
+      border-radius: 18px;
+      padding: 24px 24px 22px;
+      margin-bottom: 24px;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+      border-top: 4px solid var(--sylegro-blue);
+    }
+
+    .intro-card {
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(6px);
+      border-top-color: var(--sylegro-green);
+    }
+
+    .intro-text {
+      max-width: 90%;
+    }
+
+    .intro-text p {
+      margin-bottom: 12px;
+    }
+
+    /* Dienstleistungs-Kacheln (längliche Rows) */
+    .services-section {
+      display: flex;
+      flex-direction: column;
+      gap: 22px;
+      margin-top: 10px;
+    }
+
+    .service-row {
+      display: grid;
+      grid-template-columns: minmax(0, 1.3fr) minmax(0, 1fr);
+      gap: 0;
+      border-radius: 18px;
+      overflow: hidden;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+      background: #ffffff;
+      border-top: 4px solid var(--sylegro-blue);
+    }
+
+    .service-row:nth-child(even) {
+      grid-template-columns: minmax(0, 1fr) minmax(0, 1.3fr);
+    }
+
+    .service-text {
+      padding: 24px 26px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      background: rgba(255,255,255,0.92);
+      backdrop-filter: blur(6px);
+    }
+
+    .service-text h2 {
+      margin-bottom: 8px;
+      color: var(--sylegro-blue);
+    }
+
+    .service-text p {
+      margin-bottom: 6px;
+      color: #4b5563;
+    }
+
+    .service-image {
+      min-height: 220px;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .service-row:nth-child(1) .service-image {
+      background-image: url("dienstleistung-1.jpg"); /* Platzhalter */
+    }
+
+    .service-row:nth-child(2) .service-image {
+      background-image: url("dienstleistung-2.jpg"); /* Platzhalter */
+    }
+
+    .service-row:nth-child(3) .service-image {
+      background-image: url("dienstleistung-3.jpg"); /* Platzhalter */
+    }
+
+    /* auf kleineren Screens untereinander */
+    @media (max-width: 900px) {
+      .header-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        justify-content: flex-start;
+      }
+
+      .service-row,
+      .service-row:nth-child(even) {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    /* Scroll-Reveal Animation */
+    .reveal {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.6s ease, transform 0.6s ease;
+    }
+
+    .reveal-visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    footer {
+      text-align: center;
+      padding: 18px 20px 26px;
+      font-size: 0.85rem;
+      color: #6b7280;
+    }
   </style>
 </head>
+
 <body>
+
+  <!-- HEADER -->
   <header>
     <div class="header-inner">
       <div class="logo-area">
-        <img src="https://via.placeholder.com/80x80?text=Logo" alt="Sylegro Logo">
-        <div class="logo-text">
-          <span>Sylegro</span>
-          <span>Professionelle Dienstleistungen – zuverlässig, persönlich, unkompliziert.</span>
-        </div>
+        <img src="logo-mit-claim-weiss-rgb.png" alt="Sylegro Logo mit Claim">
       </div>
+
       <nav>
         <a href="index.html">Startseite</a>
         <a href="dienstleistungen.html">Dienstleistungen</a>
@@ -43,31 +258,98 @@
     </div>
   </header>
 
+  <!-- MAIN -->
   <main>
-    <div class="card">
-      <h1>Unsere Dienstleistungen</h1>
-      <p>Hier kannst du alle Leistungen von Sylegro genauer beschreiben.</p>
-    </div>
 
-    <div class="card">
-      <h2>Dienstleistung 1</h2>
-      <p>Genaue Beschreibung von Dienstleistung 1: Ablauf, Nutzen, für wen sie geeignet ist.</p>
-    </div>
+    <!-- Intro -->
+    <section class="card intro-card reveal">
+      <div class="intro-text">
+        <h1>Unsere Dienstleistungen</h1>
+        <p>
+          Wir bieten massgeschneiderte Lösungen für Unternehmen und Privatkunden, um höchste Sauberkeit
+          und den langfristigen Werterhalt Ihrer Immobilie zu gewährleisten.
+        </p>
+        <p>
+          So schaffen wir ein gepflegtes Umfeld, damit Sie sich auf das Wesentliche konzentrieren können.
+        </p>
+      </div>
+    </section>
 
-    <div class="card">
-      <h2>Dienstleistung 2</h2>
-      <p>Genaue Beschreibung von Dienstleistung 2.</p>
-    </div>
+    <!-- Dienstleistungs-Kacheln -->
+    <section class="services-section">
 
-    <div class="card">
-      <h2>Dienstleistung 3</h2>
-      <p>Genaue Beschreibung von Dienstleistung 3.</p>
-    </div>
+      <!-- Kachel 1: Text links, Bild rechts -->
+      <article class="service-row reveal">
+        <div class="service-text">
+          <h2>Unterhaltsreinigung</h2>
+          <p><!-- Platzhalter: hier kommen später Ihre Texte zur Unterhaltsreinigung hin. --></p>
+          <p><!-- z.B. Büroreinigung, Treppenhäuser, Sanitärbereiche usw. --></p>
+        </div>
+        <div class="service-image"></div>
+      </article>
+
+      <!-- Kachel 2: Bild links, Text rechts -->
+      <article class="service-row reveal">
+        <div class="service-image"></div>
+        <div class="service-text">
+          <h2>Spezialreinigung</h2>
+          <p><!-- Platzhalter: hier kommen später Ihre Texte zur Spezialreinigung hin. --></p>
+          <p><!-- z.B. Bau- und Umzugsreinigung, Glas- und Fassadenreinigung usw. --></p>
+        </div>
+      </article>
+
+      <!-- Kachel 3: Text links, Bild rechts -->
+      <article class="service-row reveal">
+        <div class="service-text">
+          <h2>Hauswartung</h2>
+          <p><!-- Platzhalter: hier kommen später Ihre Texte zur Hauswartung hin. --></p>
+          <p><!-- z.B. Technischer Dienst, Umgebungspflege, Winterdienst, Kleinreparaturen usw. --></p>
+        </div>
+        <div class="service-image"></div>
+      </article>
+
+    </section>
+
   </main>
 
+  <!-- FOOTER -->
   <footer>
     © Sylegro <span id="year"></span>
-    <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
+
+  <!-- Animations-Logik -->
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    /* Scrollrichtung bestimmen */
+    let lastScrollY = window.scrollY;
+    let scrollDirection = 'down';
+
+    window.addEventListener('scroll', () => {
+      const currentY = window.scrollY;
+      scrollDirection = currentY > lastScrollY ? 'down' : 'up';
+      lastScrollY = currentY;
+    });
+
+    /* Scroll-Reveal – Animation nur beim Runterscrollen, einmalig */
+    const revealElements = document.querySelectorAll('.reveal');
+
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        const el = entry.target;
+
+        if (entry.isIntersecting && scrollDirection === 'down') {
+          el.classList.add('reveal-visible');
+          // nach der ersten Animation nicht mehr beobachten
+          obs.unobserve(el);
+        }
+      });
+    }, {
+      threshold: 0.15
+    });
+
+    revealElements.forEach(el => observer.observe(el));
+  </script>
+
 </body>
 </html>
