--- a/dienstleistungen.html
+++ b/dienstleistungen.html
@@ -1,41 +1,427 @@
-<!-- Unterhaltsreinigung -->
-<div class="service-card">
-  <div class="service-text">
-    <h2>Unterhaltsreinigung</h2>
-    <p>
-      Mit durchdachten Reinigungslösungen sorgen wir für eine hygienische, gepflegte Umgebung –
-      effizient, nachhaltig und genau auf Ihre Anforderungen abgestimmt.
-    </p>
-  </div>
-  <div class="service-image">
-    <img src="Titelbildmitlogo.jpg" alt="Unterhaltsreinigung">
-  </div>
-</div>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <title>Sylegro – Dienstleistungen</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<!-- Spezialreinigung -->
-<div class="service-card reverse">
-  <div class="service-text">
-    <h2>Spezialreinigung</h2>
-    <p>
-      Manche Bereiche erfordern mehr als eine herkömmliche Reinigung. Unsere Spezialreiniger
-      bewältigen selbst anspruchsvollste Herausforderungen und bringen Ihre Räume wieder in Bestform.
-    </p>
-  </div>
-  <div class="service-image">
-    <img src="AdobeStock_482143067.jpeg" alt="Spezialreinigung">
-  </div>
-</div>
+  <!-- Schrift Kiro -->
+  <link href="https://fonts.googleapis.com/css2?family=Kiro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-<!-- Hauswartung -->
-<div class="service-card">
-  <div class="service-text">
-    <h2>Hauswartung</h2>
-    <p>
-      Mit unserem Hauswartungsservice kümmern wir uns proaktiv um Ihre Immobilie, erkennen Probleme
-      frühzeitig und sorgen für einen reibungslosen, gepflegten und funktionalen Betrieb.
-    </p>
-  </div>
-  <div class="service-image">
-    <img src="Gartenarbeit.jpg" alt="Hauswartung">
-  </div>
-</div>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    :root {
+      --sylegro-blue: #0063A5;
+      --sylegro-green: #17A863;
+      --bg-light: #f5f5f5;
+    }
+
+    body {
+      font-family: "Kiro", system-ui, -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: var(--bg-light);
+      color: #0f172a;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    /* HEADER */
+    header {
+      background: linear-gradient(to right, var(--sylegro-blue), var(--sylegro-green));
+      color: white;
+      padding: 8px 20px;
+    }
+
+    .header-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+    }
+
+    .logo-area img {
+      height: 220px;
+      width: auto;
+      object-fit: contain;
+      display: block;
+      filter: drop-shadow(0 6px 16px rgba(15, 23, 42, 0.5));
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      position: relative;
+    }
+
+    nav a {
+      color: white;
+      font-size: 0.98rem;
+      font-weight: 500;
+      position: relative;
+      padding-bottom: 3px;
+    }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 2px;
+      background: rgba(255,255,255,0.9);
+      border-radius: 999px;
+      transition: width .18s ease-out;
+    }
+
+    nav a:hover::after {
+      width: 100%;
+    }
+
+    /* Dropdown für Dienstleistungen */
+    .nav-item {
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+    }
+
+    .submenu {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background: #ffffff;
+      color: #0f172a;
+      padding: 8px 0;
+      border-radius: 10px;
+      box-shadow: 0 10px 25px rgba(15, 23, 42, 0.18);
+      min-width: 220px;
+      opacity: 0;
+      pointer-events: none;
+      transform: translateY(8px);
+      transition: opacity 0.18s ease-out, transform 0.18s ease-out;
+      z-index: 20;
+    }
+
+    .submenu a {
+      display: block;
+      padding: 8px 16px;
+      font-size: 0.95rem;
+      color: #111827;
+      text-decoration: none;
+      white-space: nowrap;
+    }
+
+    .submenu a:hover {
+      background: rgba(0, 99, 165, 0.06);
+      color: var(--sylegro-blue);
+    }
+
+    .nav-item.has-submenu:hover .submenu {
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateY(0);
+    }
+
+    /* MAIN */
+    main {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 24px 20px 32px;
+    }
+
+    h1, h2, h3 {
+      margin-top: 0;
+      font-weight: 600;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 1.35rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      line-height: 1.6;
+      font-size: 0.98rem;
+      margin-bottom: 10px;
+    }
+
+    /* Intro-Kachel */
+    .card {
+      background: #ffffff;
+      border-radius: 18px;
+      padding: 24px 24px 22px;
+      margin-bottom: 24px;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+      border-top: 4px solid var(--sylegro-blue);
+    }
+
+    .intro-card {
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(6px);
+      border-top-color: var(--sylegro-green);
+    }
+
+    .intro-text {
+      max-width: 90%;
+    }
+
+    .intro-text p {
+      margin-bottom: 12px;
+    }
+
+    /* Dienstleistungs-Kacheln */
+    .services-section {
+      display: flex;
+      flex-direction: column;
+      gap: 22px;
+      margin-top: 10px;
+    }
+
+    .service-link {
+      display: block;
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .service-row {
+      display: grid;
+      grid-template-columns: minmax(0, 1.3fr) minmax(0, 1fr);
+      border-radius: 18px;
+      overflow: hidden;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+      background: #ffffff;
+      border-top: 4px solid var(--sylegro-blue);
+      cursor: pointer;
+      transition: transform 0.18s ease, box-shadow 0.18s ease;
+    }
+
+    .service-row:nth-child(even) {
+      grid-template-columns: minmax(0, 1fr) minmax(0, 1.3fr);
+    }
+
+    .service-link:hover .service-row {
+      transform: translateY(-4px);
+      box-shadow: 0 14px 30px rgba(15, 23, 42, 0.16);
+    }
+
+    .service-text {
+      padding: 24px 26px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      background: rgba(255,255,255,0.92);
+      backdrop-filter: blur(6px);
+    }
+
+    .service-text h2 {
+      margin-bottom: 8px;
+      color: var(--sylegro-blue);
+    }
+
+    .service-text p {
+      margin-bottom: 6px;
+      color: #4b5563;
+    }
+
+    .service-image {
+      min-height: 220px;
+      background-size: cover;
+      background-position: center;
+    }
+
+    /* Hier die korrekten Bilder */
+    .service-row:nth-child(1) .service-image {
+      background-image: url("Titelbildmitlogo.jpg");
+    }
+
+    .service-row:nth-child(2) .service-image {
+      background-image: url("AdobeStock_482143067.jpeg");
+    }
+
+    .service-row:nth-child(3) .service-image {
+      background-image: url("Gartenarbeit.jpg");
+    }
+
+    /* Responsive */
+    @media (max-width: 900px) {
+      .header-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        justify-content: flex-start;
+      }
+
+      .service-row,
+      .service-row:nth-child(even) {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    /* Scroll-Reveal */
+    .reveal {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.6s ease, transform 0.6s ease;
+    }
+
+    .reveal-visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    footer {
+      text-align: center;
+      padding: 18px 20px 26px;
+      font-size: 0.85rem;
+      color: #6b7280;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <div class="header-inner">
+      <div class="logo-area">
+        <img src="logo-mit-claim-weiss-rgb.png" alt="Sylegro Logo mit Claim">
+      </div>
+
+      <nav>
+        <a href="index.html">Startseite</a>
+
+        <div class="nav-item has-submenu">
+          <a href="dienstleistungen.html">Dienstleistungen</a>
+          <div class="submenu">
+            <a href="unterhaltsreinigung.html">Unterhaltsreinigung</a>
+            <a href="spezialreinigung.html">Spezialreinigung</a>
+            <a href="hauswartung.html">Hauswartung</a>
+          </div>
+        </div>
+
+        <a href="ueber-uns.html">Über uns</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="kontakt.html">Kontakt</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- MAIN -->
+  <main>
+
+    <!-- Intro -->
+    <section class="card intro-card reveal">
+      <div class="intro-text">
+        <h1>Unsere Dienstleistungen</h1>
+        <p>
+          Wir bieten massgeschneiderte Lösungen für Unternehmen und Privatkunden, um höchste Sauberkeit
+          und den langfristigen Werterhalt Ihrer Immobilie zu gewährleisten.
+        </p>
+        <p>
+          So schaffen wir ein gepflegtes Umfeld, damit Sie sich auf das Wesentliche konzentrieren können.
+        </p>
+      </div>
+    </section>
+
+    <!-- Dienstleistungs-Kacheln -->
+    <section class="services-section">
+
+      <!-- Unterhaltsreinigung -->
+      <a class="service-link reveal" href="unterhaltsreinigung.html">
+        <article class="service-row">
+          <div class="service-text">
+            <h2>Unterhaltsreinigung</h2>
+            <p>
+              Mit durchdachten Reinigungslösungen sorgen wir für eine hygienische, gepflegte Umgebung –
+              effizient, nachhaltig und genau auf Ihre Anforderungen abgestimmt.
+            </p>
+          </div>
+          <div class="service-image"></div>
+        </article>
+      </a>
+
+      <!-- Spezialreinigung -->
+      <a class="service-link reveal" href="spezialreinigung.html">
+        <article class="service-row">
+          <div class="service-image"></div>
+          <div class="service-text">
+            <h2>Spezialreinigung</h2>
+            <p>
+              Manche Bereiche erfordern mehr als eine herkömmliche Reinigung. Unsere Spezialreiniger
+              bewältigen selbst anspruchsvollste Herausforderungen und bringen Ihre Räume wieder in Bestform.
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <!-- Hauswartung -->
+      <a class="service-link reveal" href="hauswartung.html">
+        <article class="service-row">
+          <div class="service-text">
+            <h2>Hauswartung</h2>
+            <p>
+              Mit unserem Hauswartungsservice bieten wir Ihnen eine umfassende Betreuung,
+              die weit über den üblichen Standard hinausgeht. Wir kümmern uns proaktiv um Ihre Immobilie,
+              erkennen Probleme frühzeitig und sorgen für einen reibungslosen, gepflegten und funktionalen Betrieb.
+            </p>
+          </div>
+          <div class="service-image"></div>
+        </article>
+      </a>
+
+    </section>
+
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    © Sylegro <span id="year"></span>
+  </footer>
+
+  <!-- Scroll-Reveal-Logik -->
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    let lastScrollY = window.scrollY;
+    let scrollDirection = 'down';
+
+    window.addEventListener('scroll', () => {
+      const currentY = window.scrollY;
+      scrollDirection = currentY > lastScrollY ? 'down' : 'up';
+      lastScrollY = currentY;
+    });
+
+    const revealElements = document.querySelectorAll('.reveal');
+
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting && scrollDirection === 'down') {
+          entry.target.classList.add('reveal-visible');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.15 });
+
+    revealElements.forEach(el => observer.observe(el));
+  </script>
+
+</body>
+</html>
