--- a/dienstleistungen.html
+++ b/dienstleistungen.html
@@ -92,7 +92,7 @@
     /* Dropdown für Dienstleistungen */
     .nav-item {
       position: relative;
-      display: inline-flex;
+      display: flex;
       align-items: center;
     }
 
@@ -119,7 +119,6 @@
       font-size: 0.95rem;
       color: #111827;
       text-decoration: none;
-      white-space: nowrap;
     }
 
     .submenu a:hover {
@@ -177,14 +176,6 @@
       border-top-color: var(--sylegro-green);
     }
 
-    .intro-text {
-      max-width: 90%;
-    }
-
-    .intro-text p {
-      margin-bottom: 12px;
-    }
-
     /* Dienstleistungs-Kacheln */
     .services-section {
       display: flex;
@@ -204,7 +195,6 @@
       grid-template-columns: minmax(0, 1.3fr) minmax(0, 1fr);
       border-radius: 18px;
       overflow: hidden;
-      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
       background: #ffffff;
       border-top: 4px solid var(--sylegro-blue);
       cursor: pointer;
@@ -222,9 +212,6 @@
 
     .service-text {
       padding: 24px 26px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
       background: rgba(255,255,255,0.92);
       backdrop-filter: blur(6px);
     }
@@ -234,18 +221,13 @@
       color: var(--sylegro-blue);
     }
 
-    .service-text p {
-      margin-bottom: 6px;
-      color: #4b5563;
-    }
-
     .service-image {
-      min-height: 220px;
+      min-height: 240px;
       background-size: cover;
       background-position: center;
     }
 
-    /* Hier die korrekten Bilder */
+    /* Bilder-Zuordnung */
     .service-row:nth-child(1) .service-image {
       background-image: url("Titelbildmitlogo.jpg");
     }
@@ -258,17 +240,7 @@
       background-image: url("Gartenarbeit.jpg");
     }
 
-    /* Responsive */
     @media (max-width: 900px) {
-      .header-inner {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        justify-content: flex-start;
-      }
-
       .service-row,
       .service-row:nth-child(even) {
         grid-template-columns: 1fr;
@@ -327,21 +299,12 @@
   <!-- MAIN -->
   <main>
 
-    <!-- Intro -->
     <section class="card intro-card reveal">
-      <div class="intro-text">
-        <h1>Unsere Dienstleistungen</h1>
-        <p>
-          Wir bieten massgeschneiderte Lösungen für Unternehmen und Privatkunden, um höchste Sauberkeit
-          und den langfristigen Werterhalt Ihrer Immobilie zu gewährleisten.
-        </p>
-        <p>
-          So schaffen wir ein gepflegtes Umfeld, damit Sie sich auf das Wesentliche konzentrieren können.
-        </p>
-      </div>
+      <h1>Unsere Dienstleistungen</h1>
+      <p>Wir bieten massgeschneiderte Lösungen für Unternehmen und Privatkunden, um höchste Sauberkeit und den langfristigen Werterhalt Ihrer Immobilie zu gewährleisten.</p>
+      <p>So schaffen wir ein gepflegtes Umfeld, damit Sie sich auf das Wesentliche konzentrieren können.</p>
     </section>
 
-    <!-- Dienstleistungs-Kacheln -->
     <section class="services-section">
 
       <!-- Unterhaltsreinigung -->
@@ -349,10 +312,7 @@
         <article class="service-row">
           <div class="service-text">
             <h2>Unterhaltsreinigung</h2>
-            <p>
-              Mit durchdachten Reinigungslösungen sorgen wir für eine hygienische, gepflegte Umgebung –
-              effizient, nachhaltig und genau auf Ihre Anforderungen abgestimmt.
-            </p>
+            <p>Mit durchdachten Reinigungslösungen sorgen wir für eine hygienische, gepflegte Umgebung – effizient, nachhaltig und genau auf Ihre Anforderungen abgestimmt.</p>
           </div>
           <div class="service-image"></div>
         </article>
@@ -364,10 +324,7 @@
           <div class="service-image"></div>
           <div class="service-text">
             <h2>Spezialreinigung</h2>
-            <p>
-              Manche Bereiche erfordern mehr als eine herkömmliche Reinigung. Unsere Spezialreiniger
-              bewältigen selbst anspruchsvollste Herausforderungen und bringen Ihre Räume wieder in Bestform.
-            </p>
+            <p>Manche Bereiche erfordern mehr als eine herkömmliche Reinigung. Unsere Spezialreiniger bewältigen selbst anspruchsvollste Herausforderungen und bringen Ihre Räume wieder in Bestform.</p>
           </div>
         </article>
       </a>
@@ -377,11 +334,7 @@
         <article class="service-row">
           <div class="service-text">
             <h2>Hauswartung</h2>
-            <p>
-              Mit unserem Hauswartungsservice bieten wir Ihnen eine umfassende Betreuung,
-              die weit über den üblichen Standard hinausgeht. Wir kümmern uns proaktiv um Ihre Immobilie,
-              erkennen Probleme frühzeitig und sorgen für einen reibungslosen, gepflegten und funktionalen Betrieb.
-            </p>
+            <p>Mit unserem Hauswartungsservice kümmern wir uns proaktiv um Ihre Immobilie, erkennen Probleme frühzeitig und sorgen für einen reibungslosen, gepflegten und funktionalen Betrieb.</p>
           </div>
           <div class="service-image"></div>
         </article>
@@ -391,12 +344,10 @@
 
   </main>
 
-  <!-- FOOTER -->
   <footer>
     © Sylegro <span id="year"></span>
   </footer>
 
-  <!-- Scroll-Reveal-Logik -->
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
