--- a/dienstleistungen.html
+++ b/dienstleistungen.html
@@ -227,16 +227,16 @@
       background-position: center;
     }
 
-    /* Bilder-Zuordnung */
-    .service-row:nth-child(1) .service-image {
+    /* 👇 Bildzuordnung über die Position der Links */
+    .services-section > .service-link:nth-of-type(1) .service-image {
       background-image: url("Titelbildmitlogo.jpg");
     }
 
-    .service-row:nth-child(2) .service-image {
+    .services-section > .service-link:nth-of-type(2) .service-image {
       background-image: url("AdobeStock_482143067.jpeg");
     }
 
-    .service-row:nth-child(3) .service-image {
+    .services-section > .service-link:nth-of-type(3) .service-image {
       background-image: url("Gartenarbeit.jpg");
     }
 
